Added cta styles

--- a/plugins/cta/src/cta/style.scss
+++ b/plugins/cta/src/cta/style.scss
@@ -5,8 +5,61 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-bwp-cta {
-	background-color: #21759b;
-	color: #fff;
-	padding: 2px;
+.c-cta {
+	&__inner {
+		background-color: var(--brand-1);
+		max-width: var(--max-width-cta);
+		border-radius: var(--border-radius-cta);
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	&__container {
+		position: relative;
+		padding: var(--container-padding-cta);
+	}
+
+	&__tab {
+		margin-bottom: var(--text-tab-margin-bottom);
+	}
+
+	&__header {
+		margin-bottom: var(--text-tab-margin-bottom);
+	}
+
+	.c-cta__heading {
+		font-size: var(--heading-cta);
+		font-weight: 800;
+	}
+
+	.c-cta__heading,
+	.c-cta__content {
+		color: #fff;
+	}
+
+	.c-cta__content {
+		font-weight: 400;
+	}
+
+	&__item {
+		max-width: 40.625rem;
+	}
+
+	&__media {
+		position: absolute;
+		right: 3.125rem;
+		top: 50%;
+		transform: translateY(-50%);
+		height: calc(100% + 5rem);
+		width: 30%;
+
+		picture,
+		img {
+			display: block;
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
+			object-position: center;
+		}
+	}
 }
