--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -1,3 +1,5 @@
+@use './defaults/site-defaults';
+@use './helper/tab';
 @use './components/alert';
 @use './components/header';
 @use './components/footer';
