added button styles

--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -25,6 +25,8 @@
   --border-radius-cta: 2.5rem;
   --container-padding-cta: 3.125rem 4.375rem;
   --container-padding-content: 1.5rem;
+  --text-button: 1.5rem;
+  --padding-button: 0.75rem 1.75rem;
 }
 
 body {
