--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -1,5 +1,6 @@
 @use './defaults/site-defaults';
 @use './helper/tab';
+@use './helper/button';
 @use './components/alert';
 @use './components/header';
 @use './components/footer';
