Updates site header

--- a/themes/achieve-arts/src/scss/helper/_button.scss
+++ b/themes/achieve-arts/src/scss/helper/_button.scss
@@ -9,6 +9,9 @@
   font-weight: 800;
   text-transform: uppercase;
   padding: var(--padding-button);
+  background-color: var(--brand-2);
+  color: #fff;
+  text-decoration: none;
 }
 
 .h-button {
