--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -1,6 +1,8 @@
+@use './mixins/breakpoints';
 @use './defaults/site-defaults';
 @use './helper/tab';
 @use './helper/button';
 @use './components/alert';
+@use './components/hamburger';
 @use './components/header';
 @use './components/footer';
