--- a/themes/achieve-arts/src/scss/components/_alert.scss
+++ b/themes/achieve-arts/src/scss/components/_alert.scss
@@ -24,5 +24,13 @@
   &__item {
     text-align: center;
     font-size: 1rem;
+
+    p {
+      a {
+        font-weight: 600;
+        text-decoration: none;
+        color:#fff;
+      }
+    }
   }
 }
