--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -20,6 +20,8 @@
   --text-tab-padding: 0.25rem 1.5rem;
   --text-tab-letter-spacing: 0.063rem;
   --text-tab-margin-bottom: 0.625rem;
+  --font-heading: trade-gothic-next, sans-serif;
+  --font-body: tome-sans-variable, sans-serif;
   --heading-cta: 3.875rem;
   --max-width-cta: 75rem;
   --border-radius-cta: 2.5rem;
@@ -27,9 +29,15 @@
   --container-padding-content: 1.5rem;
   --text-button: 1.5rem;
   --padding-button: 0.75rem 1.75rem;
+  --hamburger: 3.375rem;
+}
+
+%heading-style {
+  font-family: var(--font-heading);
 }
 
 body {
+  font-family: var(--font-body);
   font-size: 1.125rem;
   font-weight: 400;
   line-height: 1.3;
@@ -41,3 +49,11 @@ body {
     padding-right: var(--container-padding-content);
   }
 }
+
+h1,
+h2,
+h3,
+h4 {
+  @extend %heading-style;
+}
+
