--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -10,4 +10,7 @@
 @use './components/hamburger';
 @use './components/header';
 @use './components/hero-home';
+@use './components/team-members';
+@use './components/arrows';
+@use './components/insta';
 @use './components/footer';
