added news feed block

--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -13,4 +13,5 @@
 @use './components/team-members';
 @use './components/arrows';
 @use './components/insta';
+@use './components/news-feed';
 @use './components/footer';
