--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -32,6 +32,9 @@
   --font-team-members-item-heading: 1.875rem;
   --font-team-members-item-role: 1.063rem;
   --font-insta-follow: 2.5rem;
+  --font-news-feed-heading: 3.75rem;
+  --font-news-feed-item-heading: 1.375rem;
+  --font-news-feed-item-content: 1.063rem;
   --heading-cta: 3.875rem;
   --max-width-cta: 75rem;
   --border-radius-cta: 2.5rem;
@@ -114,6 +117,16 @@ h2 {
 
   &__bottom {
     margin-bottom: var(--spacing-block);
+  }
+}
+
+.padding-block {
+  &__top {
+    padding-top: var(--spacing-block);
+  }
+
+  &__bottom {
+    padding-bottom: var(--spacing-block);
   }
 }
 
