Added footer styles

--- a/themes/achieve-arts/src/scss/components/_hero-home.scss
+++ b/themes/achieve-arts/src/scss/components/_hero-home.scss
@@ -22,7 +22,7 @@
     >p {
       font-size: var(--font-hero-home-intro);
       font-weight: 400;
-      margin-bottom: 2rem;
+      margin-bottom: var(--spacing-para);
     }
 
     > h2,
