--- a/themes/achieve-arts/src/scss/components/_header.scss
+++ b/themes/achieve-arts/src/scss/components/_header.scss
@@ -55,6 +55,13 @@
           width: 1.5rem;
           height: 1.5rem;
           fill: var(--brand-3);
+          transition: fill 0.25s ease-in-out;
+        }
+
+        &:hover {
+          svg {
+            fill: #D2BC74;
+          }
         }
       }
 
