--- a/themes/achieve-arts/src/scss/helper/_button.scss
+++ b/themes/achieve-arts/src/scss/helper/_button.scss
@@ -12,6 +12,13 @@
   background-color: var(--brand-2);
   color: #fff;
   text-decoration: none;
+  border: none;
+  cursor: pointer;
+}
+
+%button-white {
+  background-color: #fff;
+  color: var(--brand-1);
 }
 
 .h-button {
@@ -24,5 +31,11 @@
 .wp-block-button {
   .wp-block-button__link {
     @extend %button;
+  }
+
+  &.is-style-white {
+    .wp-block-button__link {
+      @extend %button-white;
+    }
   }
 }
