--- a/themes/achieve-arts/src/scss/helper/_tab.scss
+++ b/themes/achieve-arts/src/scss/helper/_tab.scss
@@ -9,6 +9,7 @@
   border-radius: 2rem;
   text-transform: uppercase;
   padding: var(--text-tab-padding);
+  margin-bottom: var(--text-tab-margin-bottom);
 
   p {
     margin-top: 0;
