--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -15,6 +15,6 @@
 @use './components/video-carousel';
 @use './components/arrows';
 @use './components/insta';
-@use './components/media-text';
+// @use './components/media-text';
 @use './components/news-feed';
 @use './components/footer';
