--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -1,7 +1,7 @@
 // Import everything from abstracts and expose globally
 @use 'abstracts' as *;
 
-@use './third-party/splide';
+// @use './third-party/splide';
 @use './third-party/splide-video';
 
 @use './defaults/site-defaults';
