--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -12,7 +12,7 @@
 @use './components/header';
 @use './components/hero-home';
 @use './components/team-members';
-@use './components/video-carousel';
+// @use './components/video-carousel';
 @use './components/arrows';
 @use './components/insta';
 // @use './components/media-text';
