--- a/plugins/media-carousel-item/src/media-carousel-item/editor.scss
+++ b/plugins/media-carousel-item/src/media-carousel-item/editor.scss
@@ -4,4 +4,6 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-
+.wp-block-bwp-media-carousel-item {
+	border: 1px dotted #f00;
+}
