Added team member block parent

--- a/themes/achieve-arts/src/scss/main.scss
+++ b/themes/achieve-arts/src/scss/main.scss
@@ -11,7 +11,7 @@
 @use './components/hamburger';
 @use './components/header';
 @use './components/hero-home';
-@use './components/team-members';
+// @use './components/team-members';
 // @use './components/video-carousel';
 @use './components/arrows';
 @use './components/insta';
