--- a/plugins/testimonials/src/testimonials/style.scss
+++ b/plugins/testimonials/src/testimonials/style.scss
@@ -6,3 +6,52 @@
  */
 
 @use './splide';
+
+.c-testimonials {
+  &__inner {
+    background-color: #000;
+    overflow: hidden;
+    border-radius: 60px;
+    position: relative;
+    padding-bottom: 80px;
+  }
+
+  &__container {
+    padding: 40px 40px 0 40px;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    z-index: 1;
+  }
+
+  &__gradient {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle,rgba(107, 15, 219, 1) 0%, rgba(131, 15, 219, 0) 100%);
+    opacity: 0.4;
+  }
+
+  .c-testimonials__arrows {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+
+    .c-arrows__arrow.c-arrows__arrow--prev {
+      position: static;
+      flex-shrink: 0;
+      transform: translateY(0);
+    }
+
+    .c-arrows__arrow.c-arrows__arrow--next {
+      position: static;
+      flex-shrink: 0;
+      transform: translateY(0);
+    }
+  }
+}
