--- a/themes/achieve-arts/src/scss/helper/_button.scss
+++ b/themes/achieve-arts/src/scss/helper/_button.scss
@@ -27,6 +27,11 @@
   background-color: var(--brand-6);
 }
 
+%button-deep-purple {
+  color: #fff;
+  background-color: var(--brand-1);
+}
+
 .h-button {
   &__link {
     @extend %button;
@@ -48,6 +53,12 @@
   &.is-style-dark {
     .wp-block-button__link {
       @extend %button-dark;
+    }
+  }
+
+  &.is-style-deep-purple {
+    .wp-block-button__link {
+      @extend %button-deep-purple;
     }
   }
 }
