--- a/plugins/page-hero/src/page-hero/style.scss
+++ b/plugins/page-hero/src/page-hero/style.scss
@@ -5,8 +5,127 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-bwp-page-hero {
-	background-color: #21759b;
-	color: #fff;
-	padding: 2px;
+@use '../../../../themes/achieve-arts/src/scss/abstracts';
+
+.c-page-hero {
+	position: relative;
+  background-color: #000;
+	overflow: hidden;
+	border-bottom-left-radius: 60px;
+	border-bottom-right-radius: 60px;
+
+  &__inner {
+
+    color: #fff;
+    max-width: 1340px;
+    margin-left: auto;
+    margin-right: auto;
+
+  }
+
+  &__gradient {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle,rgba(107, 15, 219, 1) 0%, rgba(131, 15, 219, 0) 100%);
+    opacity: 0.4;
+  }
+
+  &__container {
+    padding: 100px 0;
+    position: relative;
+    z-index: 1;
+
+    @include abstracts.respond-to('tablet') { 
+      padding: 50px 30px;
+    }
+  }
+
+  &__items {
+    display: flex;
+    align-items: center;
+
+    @include abstracts.respond-to('tablet') { 
+      flex-direction: column;
+    }
+
+    .c-page-hero__alt-layout & {
+      flex-direction: row-reverse;
+
+      @include abstracts.respond-to('tablet') { 
+        flex-direction: column;
+      }
+    }
+  }
+
+  .c-page-hero__tab {
+    background-color: var(--brand-1);
+  }
+
+  &__item {
+    width: 55%;
+
+    @include abstracts.respond-to('tablet') { 
+      width: 100%;
+    }
+
+    &--content {
+      padding-right: 100px;
+
+      @include abstracts.respond-to('tablet') { 
+        padding-right: 0;
+        padding-bottom: var(--spacing-header);
+      }
+
+      .c-page-hero__alt-layout & {
+        padding-left: 100px;
+        padding-right: 0;
+
+        @include abstracts.respond-to('tablet') { 
+          padding-left: 0;
+        }
+      }
+    }
+
+    &--media {
+      width: 45%;
+      position: relative;
+      transform: rotate(-5deg);
+
+      @include abstracts.respond-to('tablet') { 
+        width: 100%;
+      }
+
+      picture {
+        aspect-ratio: 1 / 1;
+        border-radius: 40px;
+        overflow: hidden;
+
+        @include abstracts.respond-to('tablet') { 
+          border-radius: 26px;
+        }
+      }
+
+      picture,
+      img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  }
+
+	.c-page-hero__content-area {
+		>* {
+			margin-bottom: var(--spacing-para);
+			
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
 }
