--- a/plugins/venues/src/venues/style.scss
+++ b/plugins/venues/src/venues/style.scss
@@ -18,4 +18,13 @@
     margin-right: auto;
     margin-bottom: var(--spacing-header);
   }
+
+  &__items {
+    max-width: 1220px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 60px 80px;
+    border-radius: 60px;
+    background-color: var(--brand-1);
+  }
 }
