--- a/plugins/media-carousel-item/src/media-carousel-item/style.scss
+++ b/plugins/media-carousel-item/src/media-carousel-item/style.scss
@@ -17,6 +17,21 @@
 		background-color: black;
 	}
 
+	&__media {
+		picture {
+			display: block;
+			width: 100%;
+			height: 100%;
+
+			img {
+				display: inherit;
+				width: inherit;
+				height: inherit;
+				object-fit: cover;
+			}
+		}
+	}
+
 	&__inner {
 		padding: 55px 40px;
 		height: 100%;
