--- a/plugins/testimonials-item/src/testimonials-item/style.scss
+++ b/plugins/testimonials-item/src/testimonials-item/style.scss
@@ -86,4 +86,27 @@
 	&__role {
 		margin-bottom: var(--spacing-para);
 	}
+
+	&__stars {
+		display: flex;
+	}
+
+	&__star {
+		flex-grow: 0;
+		flex-shrink: 0;
+		width: 42px;
+		height: 42px;
+		border: 3px solid #fff;
+		border-radius: 50%;
+		background-color: var(--brand-1);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		filter: drop-shadow(0px 5px 10px rgba(0,0,0,0.15));
+
+		svg {
+			width: 17px;
+			height: 17px;
+		}
+	}
 }
