--- a/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
+++ b/themes/achieve-arts/src/scss/defaults/_site-defaults.scss
@@ -187,3 +187,17 @@ h2 {
   font-size: var(--font-lead);
 }
 
+.has-text-align {
+  &-left {
+    text-align: left;
+  }
+
+  &-right {
+    text-align: right;
+  }
+  
+  &-center {
+    text-align: center;
+  }
+}
+
